Change error pages for production

--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,7 @@
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
   <style>
   body {
     background-color: #EFEFEF;
@@ -51,6 +52,11 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+	.ubuntu {
+		font-family: 'Ubuntu';
+		color: #dd4814;
+		font-weight: bold;
+	}
   </style>
 </head>
 
@@ -58,10 +64,9 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>존재하지 않는 페이지입니다.</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p><a href="http://menumap.co.kr"><span class="ubuntu">MenuMap</span> 홈페이지로 이동하기</a></p>
   </div>
 </body>
 </html>
